--- a/WebContent/WEB-INF/index.html
+++ b/WebContent/WEB-INF/index.html
@@ -10,6 +10,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Continua</li>
+        <li>Teste</li>
     </ul>
 </body>
 </html>
