--- a/WebContent/WEB-INF/index.html
+++ b/WebContent/WEB-INF/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura</title>
+    <title>Cursos da Alura - Trabalhndo com o GIT</title>
 </head>
 <body>
     <ul>
