--- a/WebContent/WEB-INF/index.html
+++ b/WebContent/WEB-INF/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura - Trabalhndo com o GIT</title>
+    <title>Cursos da Alura - Trabalhndo com o GIT 01</title>
 </head>
 <body>
     <ul>
@@ -11,6 +11,7 @@
         <li>Ansible</li>
         <li>Integração Continua</li>
         <li>Teste</li>
+        <li>Linux</li>
     </ul>
 </body>
 </html>
