--- a/WebContent/WEB-INF/index.html
+++ b/WebContent/WEB-INF/index.html
@@ -10,7 +10,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Continua</li>
-        <li>Teste</li>
+        <li>Teste XYZ</li>
         <li>Linux</li>
     </ul>
 </body>
